Added feauture tests; Changed return type from the SynopticController.
