# laravel-synoptic-app/storage/api-docs/api-docs.json
@@ -62,6 +62,12 @@
             }
         }
     },
+    "tags": [
+        {
+            "name": "Weather",
+            "description": "Weather data"
+        }
+    ],
     "security": [
         []
     ]
